<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PowerHome</string>
    <string name="identify_yourself">Identify yourself</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_u"><u>Sign in</u></string>
    <string name="password_forgot">Forgot password ?</string>
    <string name="password">Password</string>
    <string name="new_powerhome">New on PowerHome ?</string>
    <string name="create_account"><u>Create an account</u></string>
    <string name="or">OR</string>
    <string name="continue_on_facebook">Continue on Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="cr_er_un_nouveau_compte">Create a new account</string>
    <string name="sign_up">Sign up</string>
    <string name="power_home">PowerHome</string>
    <string name="Accommodations">Accommodations</string>
    <string name="appliance">appliance</string>
    <string name="floor">floor</string>
    <string name="Gallery">Gallery</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="android_studio">Android Studio</string>
    <string name="myAccomodation">My accommodation</string>
    <string name="request">My requests</string>
    <string name="Settings">Settings</string>
    <string name="LogOut">Log out</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="already_acc">Already have an account ?</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="save">Save</string>
    <string name="Floor">Floor</string>
    <string name="Area">Area</string>
    <string name="welcome_in_my_accommodation">Welcome in my Accomodation</string>
    <string name="my_profile">My profile</string>
    <string name="Username">Username</string>
    <string name="Identifier">Identifier</string>
    <string name="solde">"Balance : "</string>
    <string name="surface_totale">Total area :</string>
    <string name="consommation">Total consumption :</string>
    <string name="enter_your_email_to_recover_your_password">Enter your email to recover your password</string>
    <string name="recover_password">Recover password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="we_ve_sent_you_the_code_to_your_mail">We\'ve sent you the code to your mail</string>
    <string name="done">Done</string>
    <string name="reset_password">Reset password</string>
    <string name="check_your_mailbox">Check your mailbox</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="verify">Verify</string>
    <string name="send_again">Send again</string>
    <string name="appliances">Appliances</string>
    <string name="please_enter_your_information">Please enter your information</string>
    <string name="add_an_appliance">+ Add an appliance</string>
    <string name="Appliance">Appliance</string>
    <string name="Add_an_appliance">Add an appliance</string>
    <string name="you_don_t_have_any_appliance_yet">You don\'t have any appliance yet</string>
    <string name="maybe_later">Maybe later</string>
    <string name="welcome">"Welcome "</string>
    <string name="consumption">Consumption</string>
    <string name="appliance_washing_machine">Washing machine</string>
    <string name="appliance_air_conditionner">Air conditionner</string>
    <string name="appliance_steam_ironer">Steam ironer</string>
    <string name="appliance_vacuum_cleaner">Vacuum cleaner</string>
    <string name="reference">Reference</string>
    <string name="edit_my_appliances">Edit my appliances</string>
    <string name="my_devices">My devices</string>
    <string name="username">Username</string>
    <string name="changer_le_mot_de_passe">Change password</string>

    <string name="error_password_regex">Password: 1 lowercase, 1 uppercase, 1 special, min 8</string>
    <string name="error_invalid_email">Invalid email (e.g. email@domain.com)</string>
    <string name="error_empty_fields">Empty fields</string>
    <string name="error_network">Network problem</string>
    <string name="error_server">Server error</string>
    <string name="error_generic">Error: </string>
    <string name="error_missing_wattage">Please enter wattage</string>
    <string name="error_missing_ref">Please enter a reference</string>
    <string name="error_missing_habitat_info">Please fill in habitat information</string>
    <string name="error_no_user_connected">No user connected</string>
    <string name="error_server_empty">Server response empty</string>
    <string name="error_habitat_not_found">Habitat not found for %s</string>
    <string name="success_code_sent">Code sent</string>
    <string name="success_code_resent">Code resent</string>
    <string name="success_account_created">Account created!</string>
    <string name="success_profile_updated">Profile updated</string>
    <string name="success_appliance_added">Appliance added!</string>
    <string name="success_appliance_deleted">Appliance deleted!</string>
    <string name="success_password_reset">Password reset successful</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_confirm_profile_msg">Do you want to modify your profile?</string>
    <string name="dialog_change_password_title">Change password</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_confirm">Do you want to delete %s?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="Confirmation">Confirmation</string>
    <string name="edit_profile">Do you want to edit your profile?</string>
    <string name="ancien_mot_de_passe">Old password</string>
    <string name="nouveau_mot_de_passe">New password</string>
    <string name="error_json">Error reading JSON:</string>
    <string name="error_calendar">Calendar loading error</string>
    <string name="choose_date">Choose a date</string>
    <string name="choose_timeslot">Choose a timeslot</string>
    <string name="choose_appliance">Choose an appliance</string>
    <string name="reservation_confirmed">Reservation confirmed</string>
    <string name="error_response">Response error</string>
    <string name="error_reserv">Booking loading error</string>
    <string name="no_upcoming_res">No upcoming reservations</string>
    <string name="calendar_of_the_week">Calendar of the week</string>
    <string name="mes_cr_neaux">My slots :</string>
    <string name="welcome_to_the_residence">Welcome to the residence</string>
    <string name="appliance_tv">Television</string>
    <string name="appliance_oven">Oven</string>
    <string name="appliance_fridge">Fridge</string>
    <string name="appliance_pc">Computer</string>
    <string name="statistiques_de_l_habitat">Accommodation statistics</string>
    <string name="r_sum_des_donn_es">Summary of data</string>
    <string name="delete_confirm_booking">Do you really want to cancel this reservation?</string>
    <string name="delete_reserv">Reservation canceled.</string>
    <string name="attention_ce_cr_neau_est_satur">⚠ Warning, this time slot is saturated.</string>
    <string name="solde_total">Total Balance</string>
    <string name="solde_initial">Initial balance</string>
    <string name="confirmer">Confirm</string>
    <string name="s_lectionnez_l_appareil_utilis">Select the device used:</string>
    <string name="bonus_co_coin">Eco-corner bonus</string>
    <string name="cr_neau_choisi">Selected time slot:</string>
    <string name="date_choisie">Selected date</string>
    <string name="choisir_un_cr_neau">Choose a timeslot :</string>
</resources>