<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_your_mailbox"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_ve_sent_you_the_code_to_your_mail"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        />

        <EditText
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/editText"
            android:id="@+id/code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="48dp"
            android:hint="@string/enter_the_code"
            android:padding="20dp"
            android:maxLength="4"
            android:textColorHint="@color/white"
            tools:ignore="TextFields"
            android:textColor="@color/black"/>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark_grey"
        android:padding="20dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_sendAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        android:padding="20dp"
        android:text="@string/send_again"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:textSize="20sp"/>

</LinearLayout>
