<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/powerhome"
        android:layout_marginBottom="60dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/you_don_t_have_any_appliance_yet"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        android:textSize="16sp"
        android:gravity="center"/>


        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edittext_rounded"
            android:text="@string/add_an_appliance"
            android:padding="20dp"
            android:onClick="add"
            android:textColor="@color/white"/>


    <Button
        android:id="@+id/btn_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:onClick="later"
        android:padding="20dp"
        android:text="@string/maybe_later"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:cornerRadius="30dp" />


</LinearLayout>