<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/powerhome"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/edittext_rounded"
        android:backgroundTint="@color/editText">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/account"/>

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/Identifier"
            android:padding="20dp"
            android:background="@null"
            android:textColorHint="@color/white"
            tools:ignore="TextFields"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/edittext_rounded"
        android:backgroundTint="@color/editText">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/lock_open_svgrepo_com" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:background="@null"
            android:textColorHint="@color/white"
            tools:ignore="TextFields"
            android:textColor="@color/black"
            android:importantForAutofill="no"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/white"
        android:text="@string/password_forgot"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        android:onClick="forgot"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark_grey"
        android:onClick="login"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:textSize="20sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_powerhome"
            android:textColor="@color/white"
            app:cornerRadius="0dp"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:id="@+id/btn_signup"
            android:onClick="signup"
            />


</LinearLayout>