<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_to_recover_your_password"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/edittext_rounded"
        android:backgroundTint="@color/editText">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/baseline_mail_outline_24"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/e_mail"
            android:padding="20dp"
            android:background="@null"
            android:textColorHint="@color/white"
            tools:ignore="TextFields"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark_grey"
        android:onClick="recover"
        android:padding="20dp"
        android:text="@string/recover_password"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:textSize="20sp"/>

</LinearLayout>
